feat: added BUMP subset for development, improved conflict resolver